# klassy

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
colors/: CMakeLists.txt  KairnDark.colors  KairnLight.colors  KiteDark.colors  KiteLight.colors  KlasseDark.colors  KlasseLight.colors  KlassyDark.colors  KlassyLight.colors  KlassyTwilight.colors  KopalDark.colors  KopalLight.colors  OpalFruitsDark.colors  OpalFruitsLight.colors
desktoptheme/: CMakeLists.txt
kdecoration/: CMakeLists.txt  Messages.sh  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettingsprovider.cpp  (+4 more)
look-and-feel/: CMakeLists.txt
look-and-feel/org.kde.klassykairndarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairndarkbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykairndarkbottompanel.desktop/contents/plasmoidsetupscripts/: org.kde.plasma.battery.js
look-and-feel/org.kde.klassykairndarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairnlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairnlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykairnlightleftpanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykairnlightleftpanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.klassykisweetdarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykisweetdarkbottompanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.klassykisweetdarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykisweetlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykisweetlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykitedarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykitedarkbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykitedarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykitedarkleftpanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykitelightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykitelightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykitelightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykitelightleftpanel.desktop/contents/: defaults
look-and-feel/org.kde.klassyklassedarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassyklassedarkbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassyklassedarkbottompanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.klassyklassedarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassyklasselightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassyklasselightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassyklasselightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykopaldarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykopaldarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassykopaldarkleftpanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykopallightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassykopallightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.klassykopallightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassyopaldarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassyopaldarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassyopallightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.klassyopallightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.klassyopallightleftpanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
(+249 files in other folders)
