install(FILES KopalDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES KopalLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES KiteDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES KiteLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
