install(FILES KiteDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES KiteLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
