install(FILES KlassyDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES KlassyLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
