install(DIRECTORY org.kde.klassykairndarkbottompanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykairndarkleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykairnlightbottompanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykairnlightleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykitedarkbottompanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykitedarkleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykitelightbottompanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassykitelightleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
